--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class='col-sm-8 padding-0' id='list'>
         <ul class='funfact'>
           <a href="#" onclick="return false">
-            <li id='cornell' class='fact'>I graduated from Cornell University in 2008</li>
+            <li id='cornell' class='fact'>I studied Chemical Engineering at Cornell University</li>
           </a>
           <a href="#" onclick="return false">
             <li id='newro' class='fact'>I am originally from the suburbs of New York City</li>
